verbiage change